--- a/sample_benchmark.yaml
+++ b/sample_benchmark.yaml
@@ -1,4 +1,4 @@
-name: EvalBenchmarks
+name: EvalBenchmark
 description: Run a small lm-eval snippet against a local HF-style model folder
 inputs:
   - name: converted_model
@@ -119,8 +119,9 @@ implementation:
 
         
         device = "cuda:0" if torch.cuda.is_available() else "cpu"
+        model_args = "pretrained={},tokenizer={},trust_remote_code=False,low_cpu_mem_usage=True".format(CKPT, CKPT)
         # model_args = "pretrained=" + CKPT + ",tokenizer=" + CKPT + ",trust_remote_code=False"
-        model_args = "pretrained={},tokenizer={},trust_remote_code=False,device_map=auto,torch_dtype=float16,low_cpu_mem_usage=True".format(CKPT, CKPT)
+        # model_args = "pretrained={},tokenizer={},trust_remote_code=False,device_map=auto,torch_dtype=float16,low_cpu_mem_usage=True".format(CKPT, CKPT)
 
         if torch.cuda.is_available():
             eprint(f"Available GPU memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.2f} GB")
